--- a/app/vues/templates/gabarits/gabarit-admin.twig
+++ b/app/vues/templates/gabarits/gabarit-admin.twig
@@ -58,11 +58,11 @@
 					<div class="nav-main h2 uppercase" role="menubar">
 						<a href="." role="menuitem" aria-haspopup="false">Accueil</a>
 						<div class="nav-main-dropdown">
-							<a href="catalogue" role="menuitem" aria-haspopup="true">Enchères</a>
+							<a href="#" role="menuitem" aria-haspopup="true">Enchères</a>
 							<div class="nav-main-dropdown-content" role="menu">
-								<a href="catalogue" role="menuitem" aria-haspopup="false">Enchères en cours</a>
-								<a href="#" role="menuitem" aria-haspopup="false">Enchères archivées</a>
-								<a href="#" role="menuitem" aria-haspopup="false">Enchères à venir</a>
+								<a href="catalogue?catalogue=public-actif" role="menuitem" aria-haspopup="false">Enchères en cours</a>
+								<a href="catalogue?catalogue=public-archive" role="menuitem" aria-haspopup="false">Enchères archivées</a>
+								<a href="catalogue?catalogue=public-futur" role="menuitem" aria-haspopup="false">Enchères à venir</a>
 							</div>
 						</div>
 						<div class="nav-main-dropdown">
@@ -136,9 +136,9 @@
 				<div class="footer-main-content">
 					<h3>À propos</h3>
 					<p class="no-padding-bottom">Lord Stampee vient d’une famille de passionnés de philatélie depuis des
-																																																																																																																																																																																																																																																																																																																																																																																																																																																																																				                    générations. Sa passion pour
-																																																																																																																																																																																																																																																																																																																																																																																																																																																																																				                    les timbres rares et précieux l'a amené à rassembler l'une des collections les plus impressionnantes
-																																																																																																																																																																																																																																																																																																																																																																																																																																																																																				                    du monde.</p>
+																																																																																																																																																																																																																																																																																																																																																																																																																																																																																										                    générations. Sa passion pour
+																																																																																																																																																																																																																																																																																																																																																																																																																																																																																										                    les timbres rares et précieux l'a amené à rassembler l'une des collections les plus impressionnantes
+																																																																																																																																																																																																																																																																																																																																																																																																																																																																																										                    du monde.</p>
 					<a href="#">En savoir plus</a>
 				</div>
 				<div class="footer-main-content">
